--- a/__NAME__.Web/packages.config
+++ b/__NAME__.Web/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="dotless" version="1.3.1.0" targetFramework="net40" />
   <package id="FontAwesome.less" version="3.1.0" targetFramework="net40" />
+  <package id="IronRuby" version="1.1.3" targetFramework="net40" />
   <package id="jQuery" version="2.0.2" targetFramework="net40" />
   <package id="jQuery.Pjax" version="1.1.0.10" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net40" />
@@ -10,6 +12,11 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="MiniProfiler" version="2.1.0" targetFramework="net40" />
   <package id="MiniProfiler.MVC3" version="2.0.2" targetFramework="net40" />
+  <package id="RequestReduce" version="1.8.76" targetFramework="net40" />
+  <package id="RequestReduce.SassLessCoffee" version="1.8.76" targetFramework="net40" />
+  <package id="SassAndCoffee.Core" version="2.0.2.0" targetFramework="net40" />
+  <package id="SassAndCoffee.JavaScript" version="2.0.2.0" targetFramework="net40" />
+  <package id="SassAndCoffee.Ruby" version="2.0.2.0" targetFramework="net40" />
   <package id="Twitter.Bootstrap.Less" version="2.3.2.1" targetFramework="net40" />
   <package id="WebActivator" version="1.4.4" targetFramework="net40" />
 </packages>
